--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Temperatura Maxima</title>
+    <style>
+
+    </style>
 </head>
 <body>
     
+<form method="POST">
+
+<input type="text" id="temp" name="temp" placeholder="Insira a Temperatura">
+
+<br>
+<input type="submit" value="medir">
+</form>
+
 </body>
 </html>
+
+
+
